--- a/client_react/package.json
+++ b/client_react/package.json
@@ -40,5 +40,7 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    }
+    },
+    "devDependencies": {},
+    "proxy": "http://127.0.0.1:5152"
 }
