--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node src/",
+        "server": "nodemon src/ --ignore client",
+        "client": "npm start --prefix client_react",
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "data:import": "node src/seeder",
+        "data:destroy": "node src/seeder -d"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "concurrently": "^7.1.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "express-async-handler": "^1.2.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.10",
         "path": "^0.12.7"
