--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "express-async-handler": "^1.2.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.10",
+        "multer": "^1.4.5-lts.1",
         "path": "^0.12.7"
     },
     "devDependencies": {
